exports[`App Component Actions changeFormValue action 1`] = `
Object {
  "field": "bedroom",
  "type": "FILTER_CHANGE",
  "value": 1,
}
`;

exports[`App Component Actions changeListingValue action 1`] = `
Object {
  "payload": "attributes",
  "type": "LISTING_UPDATE_ITEM",
}
`;

exports[`App Component Actions fetchFavorites action 1`] = `
Object {
  "params": Object {
    "id": 1,
  },
  "type": "FAVORITES_REQUEST",
}
`;

exports[`App Component Actions fetchProperties action 1`] = `
Object {
  "params": Object {
    "id": 1,
  },
  "type": "PROPERTY_REQUEST",
}
`;

exports[`App Component Actions invalidateProperty action 1`] = `
Object {
  "type": "PROPERTY_RESET",
}
`;

exports[`App Component Actions reset filter 1`] = `
Object {
  "type": "FILTER_RESET",
}
`;

exports[`App Component Actions reset filter 2`] = `
Object {
  "type": "PROPERTY_SAVE_REQUEST",
}
`;
